# bootable-stuff

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  boot.asm  bootloader.asm  kernel.asm  kernel.cpp  linker.ld  linker_kernel.ld  linker_os.ld
bootloader/: bootloader.asm  idt.asm  io.asm
kernel/: assertions.hpp  kernel.cpp  macro_foreach.hpp  utility.hpp  vga.cpp  vga.hpp
kernel/include/: IDT.hpp  KbController.hpp  PIC.hpp  VGA.hpp  interrupts.hpp  port_io.hpp  utility.hpp  vga.hpp
kernel/src/: KbController.cpp  PIC.cpp  VGA.cpp  interrupts.cpp  kernel.cpp  vga.cpp
kernel/stdlib/: type_traits.hpp
ports/musl-1.2.2/: .gitignore
qemu/: app.entitlements  codesign_qemu.sh
src/: convert.asm  decimal.asm  io.asm
src/boot/: boot.asm  crti.asm  crtn.asm  gdt.asm  pagetables.asm
src/boot/include/: gdt.asm  io.asm  long_mode.asm  protected_mode.asm  real_mode.asm  sectors.asm  vesa.asm
src/boot/src/: boot.asm  gdt.asm  pagetables.asm
src/bootloader/: bootloader.asm  crti.asm  sectors.asm
src/kernel/assembly/: cpuid.asm  idt.asm  isr.asm  memcpy.asm
src/kernel/include/: Diagnostics.h  Diagnostics.hpp  IDT.h  IDT.hpp  IDT64.hpp  ISR.hpp  Interrupts.h  KbController.h  KbController.hpp  PIC.h  PIC.hpp  PortIO.h  PortIO.hpp  Ring3.h  Time.h  VGA.h  VGA.hpp  assertions.hpp  interrupts.hpp  syscalls.h  utility.hpp
src/kernel/src/: CppABI.cpp  Diagnostics.c  Diagnostics.cpp  Interrupts.c  Interrupts.cpp  KbController.c  KbController.cpp  Kernel.c  Kernel.cpp  PIC.c  PIC.cpp  (+9 more)
src/stdlib/: function.hpp  type_traits.hpp
stdlib/: type_traits.hpp
(+59 files in other folders)
